--- a/volume-up-pin.service
+++ b/volume-up-pin.service
@@ -1,8 +1,8 @@
 [Unit]
-Description=Shutdown pin 21
+Description=Volume down pin 26
 
 [Service]
-ExecStart=/usr/bin/python3 -u shutdown-press-simple.py
+ExecStart=/usr/bin/python3 -u volume-up.py
 WorkingDirectory=/home/pi
 StandardOutput=inherit
 StandardError=inherit
